# avoid-meteors

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
include/: animationSystem.h  clock.h  collisionLayer.h  colors.h  components.h  constants.h  enumFlags.h  game.h  player.h  renderWindow.h  states.h  tags.h  tools.h
include/graphics/: colors.h  renderWindow.h
include/modules/: levelSystem.h  meteorSystem.h  player.h  playerSystem.h  renderSystem.h  scoreSystem.h
src/: animationSystem.cpp  clock.cpp  game.cpp  main.cpp  renderWindow.cpp  tools.cpp
src/graphics/: renderWindow.cpp
src/modules/: levelSystem.cpp  meteorSystem.cpp  player.cpp  playerSystem.cpp  renderSystem.cpp  scoreSystem.cpp
